@@ -1,3 +1,9 @@
+12 December 2021 Petasis George <petasis@iit.demokritos.gr>:
+ * clarin-angular/src/app/app.module.ts:
+ * clarin-angular/src/app/components/controls/uploader/uploader.component.html:
+ * clarin-angular/src/app/services/collection-import-service/collection-import-service.service.ts:
+ Fixes for Collection importing.
+
 11 December 2021 Petasis George <petasis@iit.demokritos.gr>:
  * clarin-angular/src/app/app.module.ts:
  * clarin-angular/src/app/components/controls/button/annotation-relation-set-btn/*:
